--- a/css/style.scss
+++ b/css/style.scss
@@ -1,6 +1,19 @@
-div#adidas {
-    >p {
-        font-size: 2em !important;
-        margin-top: 1% !important;
-    }
+#myBtn {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 18px;
+    border: none;
+    outline: none;
+    background-color: red;
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 4px;
+}
+
+#myBtn:hover {
+    background-color: #555;
 }
